[package]
name = "eth-primitives"
version = "4.0.0-dev"
description = "Societal DAO HTTP Primitives"
authors = { workspace = true }
homepage = { workspace = true }
edition = "2021"
license = "Apache-2.0"
publish = false
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }

# Primitives
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frame dependencies
frame-support = { workspace = true }
node-primitives = { workspace = true }

# Local dependencies
dao-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
]
try-runtime = ["frame-support/try-runtime"]
